# SwarmRobot

./: .gitignore  99-dynamixel-workbench-cdc.rules  Multi-Robot Data Collection .docx  README.md  RTABMap Set-up.docx  nano.launch  nanoinstall.sh  nanoros.sh  nuc.launch  nucinstall.sh  nucros.sh
Documentation/: Common Bugs and Solutions for the SwarmBots
documentation/: Common Bugs and Solutions for the SwarmBots.docx  Common Bugs and Solutions for the SwarmRobots  Common_Bugs_and_Solutions_for_the_SwarmBots.md  Common_Bugs_and_Solutions_for_the_Swarm_Robots.md  DebuggingSolutions.md  Example_sources.list  Guide to Configuring Indistinct USB_UART Conflicts.docx  Guide_to_Configuring_Indistinct_USB_UART_Conflicts.md  Multi-Robot_Data_Collection  Multi-Robot_Data_Collection.md  RTABMap_Set-up.md  Robot_Data_Collection.md
install/: 87-uwb.rules  88-rplidar.rules  nanoinstall.sh  nucinstall.sh
manufacturing/: Final_bottom_plate_drawing.DXF  Final_top_plate_drawing (1).DXF
ros/: CMakeLists.txt  package.xml
ros/config/: ps3.config.yaml
ros/include/: swarm_teleop.h
ros/launch/: swarm_teleop.launch  trajectory_wheel_operator.launch
ros/src/: swarm_teleop.cpp  swarm_teleop_node.cpp  traj_wheel_operator.cpp  wheel_operator.cpp
scripts/: convert_bag_to_plaza.py  convert_rosbag_uwb_data_to_plaza.py  near_trial_start.json  reformat_data_chad.py
scripts/plaza_data/: analyze_plaza_format_data.py  convert_bag_to_plaza.py  generalized_convert_bag_to_plaza.py  rtabmap_odom_to_plaza
